# mathefragen.de

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUNDING.yml  README.md  custom_storages.py  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml  run_dev_server.sh  run_production_server.sh
.github/: dependabot.yml  test.yml
.run/: docker-compose.yml[django, postgres, redis, redis-sentinel]_ Compose Deployment.run.xml
docker/: deploy.sh
docker/setup/: biofragen-service.yml  chemiefragen-service.yml  informatikfragen-service.yml  local-service.yml  mathefragen-service.yml  metafragen-service.yml  physikfragen-service.yml
docker/setup/api/: biofragen-service.yml  chemiefragen-service.yml  informatikfragen-service.yml  mathefragen-service.yml  metafragen-service.yml  physikfragen-service.yml
docker/setup/postgresql/: docker-compose.yml  service-create.sh
mathefragen/: lib.py  urls.py  wsgi.py
mathefragen/apps/aiedn/: apps.py  urls.py  views.py
mathefragen/apps/core/: admin.py  apps.py  authentication.py  context_processors.py  decorators.py  middlewares.py  models.py  pipelines.py  utils.py  views.py
mathefragen/apps/feedback/: admin.py  apps.py  models.py  urls.py  views.py
mathefragen/apps/follow/: admin.py  apps.py  models.py  urls.py  views.py
mathefragen/apps/guardian/: admin.py  apps.py  models.py  (+2 more)
mathefragen/settings/: __init__.py
mathefragen/templates/: about.html  apps.html  base.html  index.html  logo.html  messages.html  robots.txt  ttt.html  videos.html
(+371 files in other folders)
